--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
     <body>
-        <h1>static.mozilla.com hosts some static content but there's nothing to see her</h1>
+        <h1>static.mozilla.com hosts some static content but there's nothing to see here</h1>
     </body>
 </html>
